--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
         <p style="text-align: center;">Prove the authenticity of wine using the Ethereum blockchain.</p>
     </div>
 
+    <img id="productImage" class="product-image" src=""/>
+
     <div id="ftw-harvest">
         <h2>Product ID</h2>
         <div class="form-group">
@@ -24,10 +26,10 @@
             <input type="number" id="upc" name="upc" value=""><br>
             SKU
             <br>
-            <input class="input-field" type="number" id="sku" name="sku" value="" readonly><br>
+            <input class="input-field" type="number" id="sku" name="sku" value="" disabled><br>
             Current Owner ID
             <br>
-            <input type="text" id="ownerID" name="ownerID" value="" size="50" readonly><br>
+            <input type="text" id="ownerID" name="ownerID" value="" size="50" disabled><br>
             <div class=button-div>
                 <button class="btn-fetchOne" id="button" type="button" data-id="14">Fetch Data 1</button>
                 <button class="btn-fetchTwo" id="button" type="button" data-id="15">Fetch Data 2</button>
@@ -40,7 +42,7 @@
         <div class="form-group">
             Producer ID
             <br>
-            <input type="text" id="originProducerID" name="originProducerID" value="" size="50" readonly><br>
+            <input type="text" id="originProducerID" name="originProducerID" value="" size="50" disabled><br>
             Producer Name
             <br>
             <input type="text" id="originProducerName" name="originProducerName" value=""><br>
@@ -112,27 +114,17 @@
             Wine Label
             <br>
             <input type="text" id="wineLabel" name="wineLabel" value="" size="60"><br>
-            Wine Year
-            <br>
-            <input type="number" id="wineYear" name="wineYear" value="" size="60"><br>
             Wine Information
             <br>
             <input type="text" id="wineInformation" name="wineInformation" value="" size="60"><br>
             Certification Label<br><span class="label-notes">* The certification for this label must be given by a Certifier. See "Certifier Actions".</span>
             <br> 
-            <input type="text" id="certification" name="certification" value="" size="60" readonly><br>
+            <input type="text" id="certification" name="certification" value="" size="60" disabled><br>
             Certifier ID
             <br>
-            <input type="text" id="certifierID" name="certifierID" value="" size="50" readonly><br>
-           <br>
+            <input type="text" id="certifierID" name="certifierID" value="" size="50" disabled><br>
+            <br>
             <button class="btn-label" id="button" type="button" data-id="7">Label Wine</button>
-        </div>
-        <div class=form-break></div>
-        <div class="form-group">
-            Pack ID
-            <br>
-            <input type="number" id="packID" name="packID" value="" size="60"><br>
-            <br>
             <button class="btn-pack" id="button" type="button" data-id="8">Pack Wine</button>
         </div>
         <div class=form-break></div>
@@ -140,6 +132,13 @@
             Product Price
             <br>
             <input type="number" id="price" name="price" value="">&nbsp;ETH<br>
+            Product Image Hash
+            <br>
+            <input type="text" id="imageHash" name="imageHash" value="" placeholder="Type the IPFS image hash"><br>
+<!---->
+            <input type="file" id="fileinput" value=""/><br>
+            <button class="btn-upload" type="button" id="button" data-id="24">Upload image to IPFS</button>
+<!---->
             <br>
             <button class="btn-forsale" id="button" type="button" data-id="9">Wine For Sale</button>
         </div>
@@ -163,7 +162,7 @@
         <div class="form-group">
             Distributor ID
             <br>
-            <input type="text" id="distributorID" name="distributorID" value="" size="50" readonly><br>
+            <input type="text" id="distributorID" name="distributorID" value="" size="50" disabled><br>
             <br>
             <button class="btn-buy" id="button" type="button" data-id="10">Buy Wine</button>
             <button class="btn-ship" id="button" type="button" data-id="11">Ship Wine</button>
@@ -173,7 +172,7 @@
         <div class="form-group">
             Retailer ID
             <br>
-            <input type="text" id="retailerID" name="retailerID" value="" size="50" readonly><br>
+            <input type="text" id="retailerID" name="retailerID" value="" size="50" disabled><br>
             <br>
             <button class="btn-receive" id="button" type="button" data-id="12">Receive Wine</button>
         </div>
@@ -182,7 +181,7 @@
         <div class="form-group">
             Consumer ID
             <br>
-            <input type="text" id="consumerID" name="consumerID" value="" size="50" readonly><br>
+            <input type="text" id="consumerID" name="consumerID" value="" size="50" disabled><br>
             <br>
             <button class="btn-purchase" id="button" type="button" data-id="13">Purchase Wine</button>
         </div>
@@ -213,6 +212,9 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://unpkg.com/ipfs-api@26.1.2/dist/index.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/ipfs@0.35.0/dist/index.js" crossorigin="anonymous"></script>
+    
     <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
